fixed alignment

--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ blockquote, q {
     padding:0;
     margin:0;
     max-width:100%;
-    border:1px solid grey;
+    /* border:1px solid grey; */
    } 
   
    /*general styles*/
@@ -90,6 +90,7 @@ nav a{
 .left, .right{
     text-align: center;
     display:inline-block;
+    vertical-align: middle;
 }
 .left{
     width:35%;
@@ -100,8 +101,6 @@ nav a{
 }
 .right{
     width:60%;
-    position:absolute;
-    top: 45%;
 }
 .content{
     background-color:#DDB9A3;
